fix up chat video collapsed controls

--- a/css/chat.css
+++ b/css/chat.css
@@ -1410,6 +1410,38 @@ body:not(.WindowFocus) .inviteAnotherFriendButton {
   -webkit-mask-image: var(--zehn-icon-window-restore) !important;
 }
 
+/* VIDEO COLLAPSED */
+.BBCodeAlreadyCollapsed.Minimized .BBCodeAlreadyCollapsedText, .BBCodeResizableComponent.Minimized .BBCodeCollapsed_Friend {
+  color: var(--zehn-color-text-primary) !important;
+  font-weight: 400 !important;
+  font-size: var(--zehn-size-14) !important;
+  background-color: transparent !important;
+}
+
+.BBCodeAlreadyCollapsed.Minimized:hover .BBCodeAlreadyCollapsedText, .BBCodeResizableComponent.Minimized:hover .BBCodeCollapsed_Friend {
+  color: var(--zehn-color-text-primary) !important;
+  font-weight: 400 !important;
+  font-size: var(--zehn-size-14) !important;
+  background-color: transparent !important;
+}
+
+.BBCodeAlreadyCollapsed.Minimized:active .BBCodeAlreadyCollapsedText, .BBCodeResizableComponent.Minimized:active .BBCodeCollapsed_Friend {
+  color: var(--zehn-color-text-primary) !important;
+}
+
+.BBCodeResizableComponent.Minimized .BBCodeCollapsed_Friend {
+  transition: none !important;
+}
+
+.BBCodeCollapsed_Friend {
+  margin: 0 0 0 32px !important;
+  padding: 0 16px !important;
+  line-height: 32px !important;
+  border-radius: 0 !important;
+  transition: none !important;
+  background-color: transparent !important;
+}
+
 /* VIDEO PLAY CONTROL */
 .chatVideoPlayControl {
   background-color: transparent !important;
@@ -1578,6 +1610,15 @@ body:not(.WindowFocus) .inviteAnotherFriendButton {
   height: 32px !important;
   bottom: 0 !important;
   right: 0 !important;
+}
+
+.BBCodeCollapseControl .SVGIcon_Button {
+  transition: none !important;
+}
+
+.Minimized .BBCodeCollapseControl .SVGIcon_Button {
+  transform: none !important;
+  -webkit-mask-image: var(--zehn-icon-window-restore) !important;
 }
 
 /* WORKSHOP CONTAINER */
